# TanakaWorks

./: README.md  pyproject.toml
AdiabaticExpansion/CO2/: .gitignore  Makefile  movie.ipynb
AdiabaticExpansion/H2O/: .gitignore  movie.py
AdiabaticExpansion/Me/: Makefile  movie.py
CO2/: .gitignore  2gro.ipynb  Makefile  README.md  co2.vmd  movie.ipynb  pyproject.toml
contourplot/: plot.py
